# pixort

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: pixort.py
