[project]
name = "pixort"
version = "0.1.1"
description = "Add your description here"
authors = [
    { name = "Dhia Hmila", email = "dhiahmila@gmail.com" }
]
dependencies = [
    "typer[standard]>=0.12.0",
    "hachoir>=3.3.0",
    "pillow>=10.0.0",
    "filetype>=1.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
cli = [
    "click==8.1.7",
    "colorama==0.4.6",
    "filetype==1.2.0",
    "hachoir==3.3.0",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "pillow==10.3.0",
    "pygments==2.18.0",
    "rich==13.7.1",
    "shellingham==1.5.4",
    "typer==0.12.3",
    "typing-extensions==4.11.0",
]

[project.scripts]
pixort = "pixort:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-packages = true
packages = ["src/pixort.py"]


[tool.ruff]
line-length = 88
target-version = "py38"
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]


[tool.ruff.lint.pycodestyle]
max-line-length = 100
